# candor

./: .clang-format  .envrc  .gitignore  README.org  candor.h  config.h.in  guix-manifest.scm  meson.build  meson_options.txt
candor/: builtins.c  builtins.h  candor.c  cenv.c  cenv.h  cval.c  cval.h  main.c  parser.c  parser.h
candor/builtins/: conditional.c  list.c  math.c  stdlib.h  string.c
candor/builtins/stdlib/: proc.c
libcandor/: builtins.c  builtins.h  candor.c  candor.h  cval.c  cval.h  main.c
libcandor/builtins/: conditional.c  list.c  math.c  sugar.c
src/: builtins.c  candor.h  cval.c  main.c  repl.c  repl.h
src/builtins/: conditional.c
stdlib/: atom.cndr  cond.cndr  list.cndr  math.cndr
subprojects/: mpc.wrap
subprojects/packagefiles/mpc/: meson.build
